fixtures/invalid/returns.jsx
export function ReturnsString() {
  return "Ready";
}

export function ReturnsNumber() {
  return 1;
}

export function ReturnsTemplateLiteral() {
  return `Ready`;
}
